--- a/src/popup.html
+++ b/src/popup.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link href="styles/popup.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600" rel="stylesheet">
 </head>
 
 <body>
