--- a/src/popup.html
+++ b/src/popup.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <link href="styles/popup.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600" rel="stylesheet">
+  <link href="https://unpkg.com/ionicons@4.2.6/dist/css/ionicons.min.css" rel="stylesheet">
 </head>
 
 <body>
