--- a/src/options.html
+++ b/src/options.html
@@ -1,52 +1,58 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <link href="styles/options.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Options & Settings</title>
 </head>
+
 <body class="wrap">
   <div class="grid">
     <div class="unit whole center-on-mobiles">
       <div class="heading">
-        <h1>Extension Boilerplate</h1>
-        <p class="lead">A foundation for creating cross-browser extensions</p>  
+        <h1>Band Protocol Wallet</h1>
+        <p class="lead">A foundation for creating cross-browser extensions</p>
       </div>
     </div>
   </div>
-  
+
   <section class="content">
     <div class="grid">
       <div class="unit whole center-on-mobiles">
         <div class="option">
-          <h5>Popup color</h5>  
+          <h5>Popup color</h5>
           <div class="radio-group">
-            <label><input class="js-radio white" type="radio" name="radio" value="white">White</label>
-            <label><input class="js-radio beige" type="radio" name="radio" value="beige">Beige</label>
-            <label><input class="js-radio lavender" type="radio" name="radio" value="lavender">Lavender</label>
+            <label>
+              <input class="js-radio white" type="radio" name="radio" value="white">White</label>
+            <label>
+              <input class="js-radio beige" type="radio" name="radio" value="beige">Beige</label>
+            <label>
+              <input class="js-radio lavender" type="radio" name="radio" value="lavender">Lavender</label>
           </div>
         </div>
-        
+
         <div class="option">
           <em class="text-muted">...display your extensions' options here...</em>
         </div>
 
       </div>
-    </div>  
+    </div>
   </section>
-  
-  
+
+
   <footer class="main-footer">
     <div class="grid">
       <div class="unit whole center-on-mobiles">
         <p class="text-center text-muted">
-          &copy; Extension Boilerplate
+          &copy; Band Protocol
         </p>
       </div>
     </div>
-  
+
   </footer>
   <script src="scripts/options.js"></script>
 </body>
+
 </html>
